<resources>
    <string name="app_name">设置</string>
    <string name="main_general">通用</string>
    <string name="main_picture">图像</string>
    <string name="main_sound">声音</string>
    <string name="main_network">连接</string>
    <string name="main_security">安全</string>
    <string name="main_system">系统</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="general_language_zh">中文</string>
    <string name="general_language_en">英文</string>
    <string name="general_save_energy">节能</string>
    <string name="general_language_setting">语言设置</string>
    <string name="general_input">输入法</string>
    <string name="picture_backlight">背光</string>
    <string name="picture_param">图像参数</string>
    <string name="picture_pictureMode">图像模式</string>
    <string name="picture_brightness">亮度</string>
    <string name="picture_contrast">对比度</string>
    <string name="picture_saturation">色度</string>
    <string name="picture_hue">色调</string>
    <string name="picture_sharpness">清晰度</string>
    <string name="picture_color_temperature">色温</string>
    <string name="picture_reset">复位</string>
    <string name="security_adb_debug">ADB调试</string>
    <string name="security_unknown_sources">允许未知来源</string>
    <string name="system_information">系统信息</string>
    <string name="system_legal_license">开放源代码许可</string>
    <string name="system_subscriber_agreement">用户协议</string>
    <string name="system_local_update">本地升级</string>
    <string name="network_network_update">网络升级</string>
    <string name="system_restore">系统还原</string>
    <string name="sound_system_sound">按键音</string>
    <string name="sound_effect">音效</string>
    <string name="sound_mode">声音模式</string>
    <string name="sound_treble">高音</string>
    <string name="sound_bass">低音</string>
    <string name="sound_surround">环绕声</string>
    <string name="sound_balance">平衡</string>
    <string name="sound_reset">复位</string>
    <string name="system_display_size">43吋</string>
    <string name="system_resolution">3840 x 2160 (4K)</string>
    <string name="system_cpu">CA72x2+CA53x2@1.1G(QUAD Core)</string>
    <string name="system_gpu">Mali-T820</string>
    <string name="system_android">Android %1$s</string>
    <string name="system_info_resolution">分辨率</string>
    <string name="system_info_cpu">主处理器</string>
    <string name="system_info_gpu">图形处理器</string>
    <string name="system_info_rom_ram">存储空间/运行内存</string>
    <string name="system_info_ethernet_mac">以太网MAC地址</string>
    <string name="system_info_wireless_mac">无线网MAC地址</string>
    <string name="system_info_system_version">操作系统版本</string>
    <string name="system_info_sdk_version">Sdk软件版本</string>
    <string name="system_update_reset">是否恢复出厂设置?这将会重启你的电视</string>
    <string name="system_reset_wait">恢复中...</string>
    <string name="network_wireless_hotspot">无线热点</string>
    <string name="network_hotspot_keymgmt">安全性</string>
    <string name="network_hotspot_ssid">网络名称</string>
    <string name="network_hotspot_passwd">密码</string>
    <string name="network_ethernet_title">有线网络</string>
    <string name="network_wireless_title">无线网络</string>
    <string name="network_bluetooth">蓝牙</string>
    <string name="network_pppoe">PPPOE</string>
    <string name="network_sim_4g">4G</string>
    <string name="wired_conn_setting">手动设置</string>
    <string name="net_ip_title">IP地址</string>
    <string name="net_subnet_title">子网掩码</string>
    <string name="net_gateway_title">默认网关</string>
    <string name="net_dns_title">DNS服务器</string>
    <string name="ethernet_static_null">静态IP设置不能为空</string>
    <string name="ethernet_static_error">静态IP格式错误</string>
    <string name="ethernet_save_success">保存成功</string>
    <string name="wireless_switch_title">无线网络连接</string>
    <string name="network_wps">通过WPS连接</string>
    <string name="wifi_state_add">添加网络</string>
    <string name="wifi_list_summary">(%1$s)</string>
    <string name="wireless_title">无线网络</string>
    <string name="general_screensaver">屏保</string>
    <string name="general_screensaver_style">屏保样式</string>
    <string name="general_screensaver_color">万花筒</string>

</resources>
